--- a/css/footer.css
+++ b/css/footer.css
@@ -1,26 +1,49 @@
-/* footer{
-    position: relative;
+/* Footer */
+footer{
     background-color: #DC4100;
-    bottom: 0%;
-    left: 0%;
-    right: 0%;
-    width: 100%;
     color: white;
+    height: 300px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    align-items: center;
 }
 
-.footer{
-    position: relative;
-    
+/* Logo en el footer */
+.BoLogo{
+    margin-left: 100px;
+    margin-right: 100px;
+    display: flex;
+    justify-content: center;
 }
 
-.imgF img{
-    padding-top: 15px;
-    width: 20%;
+.BoLogo img{
+    height: 80px;
 }
 
-.liF{
-    position: relative;
+/* Menu en el footer */
+.BoMenu{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    padding-top: 35px;
-} */
+    gap: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+/* Listas - Menu en el footer */
+
+
+#sinf {
+    list-style: none;
+    padding-top: 2px;
+}
+
+#sinf a {
+    color: white;
+    text-decoration: none;
+}
+
+#sinf a:hover {
+    text-decoration: underline;
+    padding: 5px;
+    font-weight: 600;
+}
