Implementación de NavBar Responsive
Mejoras, correcciones en general y comentarios.

--- a/css/footer.css
+++ b/css/footer.css
@@ -10,7 +10,7 @@ footer{
     height: 80px;
 }
 
-/* Listas - Menu en el footer */
+/* Listas - - Menu en el footer */
 #sinf {
     list-style: none;
     padding-top: 2px;
