--- a/css/responsive.css
+++ b/css/responsive.css
@@ -62,8 +62,6 @@ html {
   }
 }
 
-@media screen and (max-width: 1200px) {
-}
+@media screen and (max-width: 1200px) {}
 
-@media screen and (max-width: 1400px) {
-}
+@media screen and (max-width: 1400px) {}
